# claude-voice

./: .gitignore  README.md  SKILL.md  config.yaml  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt
claude_voice/: client.py  config.py  daemon.py  hotkey.py  icon.py  paster.py  recorder.py  transcriber.py  tray.py
