[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-voice"
version = "0.1.0"
description = "Local Whisper voice dictation for Claude Code and any app — push-to-talk, auto-paste, offline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["whisper", "voice", "dictation", "claude", "transcription", "speech-to-text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "PyYAML>=6.0",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
tray = [
    "pystray>=0.19.4",
    "Pillow>=10.0.0",
    "keyboard>=0.13.5",
    "pyautogui>=0.9.54",
]

[project.scripts]
claude-voice = "main:main"

[project.urls]
Homepage = "https://github.com/obsoul/claude-voice"
Issues = "https://github.com/obsoul/claude-voice/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_voice*"]
